--- a/css/common.css
+++ b/css/common.css
@@ -4,17 +4,28 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
- 
 }
 
-ul, li  {
+ul,
+li {
   list-style-type: none;
 }
-
+.gallery-position {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1440px;
+  padding: 0;
+}
+.img-position {
+  width: 360px;
+  height: 300px;
+  margin: 12px;
+}
